--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
 NODE_ENV=development
-DATABASE_URL="postgresql://user:password@localhost:5432/payroll_db?schema=public"
+DATABASE_URL="mysql://root:1234@localhost:3306/payroll_db"
 JWT_SECRET="your_super_secret_key_change_this"
 JWT_EXPIRES_IN="1d"
 BCRYPT_SALT_ROUNDS=10
