--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.11",
     "winston": "^3.0.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "nodemon": "^3.0.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
