--- a/.env
+++ b/.env
@@ -1,7 +1,23 @@
 PORT=5000
 NODE_ENV=development
-DATABASE_URL="mysql://root:1234@localhost:3306/payroll_db"
-JWT_SECRET="your_super_secret_key_change_this"
-JWT_EXPIRES_IN="1d"
+
+# Database
+DATABASE_URL=mysql://root:1234@localhost:3306/payroll_db
+
+# JWT
+JWT_SECRET=your_super_secret_key_change_this
+JWT_EXPIRES_IN=1d
+
+# Security
 BCRYPT_SALT_ROUNDS=10
-CORS_ORIGIN="http://localhost:3000"
+CORS_ORIGIN=http://localhost:3000
+
+# EMAIL CONFIG - Brevo (USE THE LOGIN FROM BREVO DASHBOARD)
+SMTP_HOST=mailslurp.mx
+SMTP_PORT=2465
+SMTP_USER=y5AGUsCLkwegX7yPcO6w4vWA1CpWB4E0
+SMTP_PASS=GszMjYRr3FE1U6OQBVga5H4WLaNa4tIn
+EMAIL_FROM=Payroll System <user-d8b54fca-8317-43c0-b7f4-2007981600d6@mailslurp.biz>
+
+FRONTEND_URL=http://localhost:5173
+EMAIL_VERIFY_TOKEN_EXPIRES=15
