foxed email error

--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ BCRYPT_SALT_ROUNDS=10
 CORS_ORIGIN=http://localhost:3000
 
 # EMAIL CONFIG - Brevo (USE THE LOGIN FROM BREVO DASHBOARD)
-SMTP_HOST=mailslurp.mx
-SMTP_PORT=2465
-SMTP_USER=y5AGUsCLkwegX7yPcO6w4vWA1CpWB4E0
-SMTP_PASS=GszMjYRr3FE1U6OQBVga5H4WLaNa4tIn
-EMAIL_FROM=Payroll System <user-d8b54fca-8317-43c0-b7f4-2007981600d6@mailslurp.biz>
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=thilinapathumrathnayaka@gmail.com
+SMTP_PASS=yroqtkurcyvyzbpj
+EMAIL_FROM=Payroll System <thilinapathumrathnayaka@gmail.com>
 
 FRONTEND_URL=http://localhost:5173
 EMAIL_VERIFY_TOKEN_EXPIRES=15
