--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "express": "^4.18.0",
     "express-validator": "^7.0.0",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.11",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "winston": "^3.0.0"
   },
   "devDependencies": {
