--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "stripe": "^20.1.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
